--- a/login_app/web/index.html
+++ b/login_app/web/index.html
@@ -26,7 +26,32 @@
   <title>login_app</title>
   <link rel="manifest" href="manifest.json">
 </head>
+
 <body>
+  <!--firebase-app.js should go first.-->
+  <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-firestore.js"></script>
+
+  <!-- Firebase Configuration -->
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+      apiKey: "AIzaSyAYf69-rLqgS4ryuJc1bYCJObTogVuglpo",
+      authDomain: "clem-bfea0.firebaseapp.com",
+      projectId: "clem-bfea0",
+      storageBucket: "clem-bfea0.appspot.com",
+      messagingSenderId: "1084757528061",
+      appId: "1:1084757528061:web:7408e848fc94c01cc99d94",
+      measurementId: "G-EJM53MV7PM"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
+
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
