--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-  <!--firebase-app.js should go first.-->
+  <!--firebase-app.js should go first-->
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
@@ -51,6 +51,9 @@
     firebase.initializeApp(firebaseConfig);
     firebase.analytics();
   </script>
+
+  <!--Required script for Jitsi-->
+  <script src="https://meet.jit.si/external_api.js" type="application/javascript"></script>
 
   <!-- Required scripts for native_pdf_view -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/pdf.js/2.4.456/pdf.min.js"></script>
