--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -39,13 +39,13 @@
     // Your web app's Firebase configuration
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     var firebaseConfig = {
-      apiKey: "AIzaSyAYf69-rLqgS4ryuJc1bYCJObTogVuglpo",
-      authDomain: "clem-bfea0.firebaseapp.com",
-      projectId: "clem-bfea0",
-      storageBucket: "clem-bfea0.appspot.com",
-      messagingSenderId: "1084757528061",
-      appId: "1:1084757528061:web:7408e848fc94c01cc99d94",
-      measurementId: "G-EJM53MV7PM"
+      apiKey: "AIzaSyDVgShcMb66ajAP5x54sT72EBPnsiR2AEQ",
+      authDomain: "coviduous-api.firebaseapp.com",
+      projectId: "coviduous-api",
+      storageBucket: "coviduous-api.appspot.com",
+      messagingSenderId: "873047711437",
+      appId: "1:873047711437:web:a47956afd1ebb3c4049384",
+      measurementId: "G-1WKQ3BHC0K"
     };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
